# sci

./: .gitignore  CMakeLists.txt
cmake/: use_latex.cmake  utils.cmake
figs/: figs.py
papers/: CMakeLists.txt
papers/LMI-scalar/: CMakeLists.txt  LMI-scalar.tex
reports/: CMakeLists.txt
reports/07-sem/: 07-sem.tex  CMakeLists.txt
scripts/: steps.m  tests.m
